fix: bottom align map and info panel

--- a/packages/cccv/src/pages/MapPage/MapPage.scss
+++ b/packages/cccv/src/pages/MapPage/MapPage.scss
@@ -132,6 +132,7 @@ $gapSize: 12px;
   .info-panel {
     position: absolute;
     grid-column: 9 / span 4;
+    overflow: auto;
     grid-row: 1;
     height: 100%;
     width: 100%;
